2010-06-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/notebook.c:
   Align notebook tab close buttons centred vertically - thanks to
   Robux.Biz (galyuk).


2010-06-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * po/POTFILES.skip:
   Add doc/stash-example.c to fix 'make distcheck'.
 * geany.nsi:
   Change the RequestExecutionLevel for the Windows installer to
   'highest'.
 * New release: Geany 0.19 "Vellam".


2010-06-10  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Group undo action for Insert Multiline Comment.


2010-06-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * Makefile.am:
   Don't individually install data/*.tags as all data/* files will be
   installed anyway.


2010-06-07  Frank Lanitz  <frank@frank.uvena.de>

 * tagmanager/tm_project.c:
   Fix a double free. (patch by Daniel Marjamaki, thanks).


2010-06-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/tm_workspace.c:
   Fix two memory leaks (patch by Daniel Marjamaki, thanks).
 * src/sidebar.c:
   Fix reducing paths to project name in the Documents list
   (patch by Eugene Arshinov, thanks).
 * src/symbols.c:
   Fix crash when trying to sort NULL pointers as tags in the Symbols
   list (closes #3011986).
 * NEWS, scintilla/*, scintilla/include/*, src/plugindata.h:
   Update Scintilla to version 2.12.
 * wscript, scintilla/Makefile.am, scintilla/makefile.win32,
   scintilla/LexCrontab.cxx:
   Remove unused Crontab lexer.
 * data/filetypes.css, src/highlighting.c:
   Add new style "media" for filetype CSS.


2010-06-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Build section: minor rewording, formatting fixes; move some
   sentences.


2010-06-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/build.c:
   Explicitly try to localise build menu item labels with
   gettext to enforce getting default labels translated.